--- a/app/src/main/res/layout/mainpage_activity.xml
+++ b/app/src/main/res/layout/mainpage_activity.xml
@@ -24,6 +24,7 @@
         app:itemTextColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu" />
 
