--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="orange">#FF5722</color>
     <color name="green">#3FA239</color>
     <color name="blue">#618DE4</color>
+    <color name="color_bnv1">#151414</color>
+    <color name="color_bnv2">#484545</color>
 </resources>
