--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,21 +3,26 @@
 
     <item android:id="@+id/fragment_home"
         android:icon="@drawable/ic_baseline_home"
+        android:enabled="true"
         android:title="홈"/>
     <item
         android:id="@+id/fragment_booksale"
         android:icon="@drawable/ic_baseline_booksale"
+        android:enabled="true"
         android:title="판매"/>
     <item
         android:id="@+id/fragment_search"
         android:icon="@drawable/ic_baseline_search"
+        android:enabled="true"
         android:title="검색"/>
 
     <item android:id="@+id/fragment_chatList"
         android:icon="@drawable/ic_baseline_chat"
+        android:enabled="true"
         android:title="채팅"/>
 
     <item android:id="@+id/fragment_myPage"
         android:icon="@drawable/ic_baseline_person"
+        android:enabled="true"
         android:title="마이"/>
 </menu>
