--- a/app/src/main/res/layout/mainpage_activity.xml
+++ b/app/src/main/res/layout/mainpage_activity.xml
@@ -30,7 +30,7 @@
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/list"
             tools:listitem="@layout/item_article"/>
 
