--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -33,6 +33,7 @@
         app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />
 
     <ScrollView
+        android:paddingTop="62dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
