--- a/app/src/main/res/layout/mainpage_activity.xml
+++ b/app/src/main/res/layout/mainpage_activity.xml
@@ -27,7 +27,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="61dp"
+        android:paddingBottom="100dp">
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
